--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -22,6 +22,11 @@
   width: 215px;
 }
 
+/* 体験記リスト */
+.is-4by3 img {
+  object-fit: cover;
+}
+
 /* 体験記リストへ */
 .font-lil-bigger {
   font-size: 1.1rem;
