--- a/app/views/searches/select_symptom.html.erb
+++ b/app/views/searches/select_symptom.html.erb
@@ -1,3 +1,5 @@
+<progress class="progress is-link" value="30" max="100">30%</progress>
+
 <h3>症状の選択</h3>
 
 <%= form_with url: select_age_path, method: :get do |form| %>
