--- a/app/views/searches/select_breed.html.erb
+++ b/app/views/searches/select_breed.html.erb
@@ -1,3 +1,5 @@
+<progress class="progress is-link" value="90" max="100">90%</progress>
+
 <h3>猫種の選択</h3>
 
 <%= form_with url: search_results_path, method: :get, local: true do |form| %>
@@ -5,8 +7,9 @@
   <div class="field">
     <p>該当する項目を選んで「結果を見る」を押してください。<br>
     （猫種で絞り込みを行わない場合は、何も選択せずに「結果を見る」へ進んでください。）</p>
-    <strong><%= form.label :breed_name %></strong>
-    <%= form.select :breed_name, @breeds.map{|b|[b.name, b.name]}, include_blank: "選択してください" %>
+    <div class="select mt-5">
+      <%= form.select :breed_name, @breeds.map{|b|[b.name, b.name]}, include_blank: "選択してください" %>
+    </div>
   </div>
 
 <%= form.submit '結果を見る', name: nil, class: "button is-fullwidth is-pink is-medium is-rounded mt-6"  %>
