--- a/app/views/users/cancellation.html.erb
+++ b/app/views/users/cancellation.html.erb
@@ -1,12 +1,18 @@
 <h3>退会手続き</h3>
 
-<p>
+<p class="mt-5 mx-4">
   退会手続きをされますと、会員限定のサービスをご利用いただけなくなります。<br>
-  再度ご利用をいただく場合には、新規登録のお手続きが必要になります。<br>
+  再度ご利用をいただく場合には、新規登録のお手続きが必要となります。
+</P>
+<p class="mx-4">
   尚、これまでに投稿された体験記・猫の情報は削除されませんので、<br>
-  削除を希望される場合は、あらかじめご自身で削除いただいてから退会のお手続きをお願いいたします。<br>
+  削除を希望される場合は、あらかじめご自身で削除いただいてから退会のお手続きをお願いいたします。
+</P>
+<p class="mx-4">
   本当に退会してよろしいですか？
 </p>
 
-<%= link_to "退会しない", user_path(current_user) %>
-<%= link_to "退会する", withdrawal_user_path, data: { confirm: t('.are_you_sure'), turbo_confirm: t('.are_you_sure') }, method: :patch %>
+<div class="align-center">
+  <%= link_to "退会しない", user_path(current_user), class: "button is-info m-4" %>
+  <%= link_to "退会する", withdrawal_user_path, data: { confirm: t('.are_you_sure'), turbo_confirm: t('.are_you_sure') }, method: :patch, class: "button is-danger is-light m-4"  %>
+</div>
