fixed the design, set seed data, close #39

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -49,7 +49,7 @@
   </div>
 <% end %>
 
-<p class="content is-medium my-6 mx-4"><%= @blog.content %></p>
+<p class="content my-6 mx-4"><%= @blog.content %></p>
 <p class="border mt-6"></p>
 
 <% if @blog.age_range.present? %>
