--- a/app/views/searches/select_breed.html.erb
+++ b/app/views/searches/select_breed.html.erb
@@ -7,7 +7,7 @@
   <div class="field">
     <p>該当する項目を選んで「結果を見る」を押してください。<br>
     （猫種で絞り込みを行わない場合は、何も選択せずに「結果を見る」へ進んでください。）</p>
-    <div class="select mt-5">
+    <div class="select mt-5 ml-4">
       <%= form.select :breed_name, @breeds.map{|b|[b.name, b.name]}, include_blank: "選択してください" %>
     </div>
   </div>
