--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,7 +17,7 @@
 
 body {
   margin: 0;
-  background-image: url("pink_paws.png");
+  background-image: image-url("pink_paws.png");
   padding-top: 4rem !important;
 }
 
