--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
  *= require_self
  */
 @import "font-awesome";
+@import "bulma/bulma.sass";
 
 body {
   margin: 0;
@@ -53,4 +54,8 @@ body {
 .is-pink {
   @extend .is-aqua-green;
   background-color: #fbb !important;
+}
+
+.footer {
+  background-color: #fff !important;
 }
