--- a/app/javascript/packs/application.scss
+++ b/app/javascript/packs/application.scss
@@ -1,5 +1,5 @@
-@import "bulma/css/bulma.min.css";
+// @import "bulma/css/bulma.min.css";
 
-.footer {
-  background-color: #fff !important;
-}
+// .footer {
+//   background-color: #fff !important;
+// }
