fixed design and remove direct upload

--- a/app/views/blogs/confirm.html.erb
+++ b/app/views/blogs/confirm.html.erb
@@ -27,7 +27,7 @@
   </p>
 
   <p class="label mt-6 ml-4"><%= form.label :content %></p>
-  <p class="ml-4"><%= @blog.content %></p>
+  <p class="ml-4 pre-wrap"><%= @blog.content %></p>
 
   <p class="label mt-6 ml-4"><%= form.label :age_range %></p>
   <p class="ml-4"><%= @blog.age_range_i18n %></p>
