--- a/app/views/cats/blog_list.html.erb
+++ b/app/views/cats/blog_list.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="column">
     <span class="title is-4"><%= @cat.name %>の体験記一覧</span>
-    <p class="mt-2"><%= @cat.introduction %></p>
+    <p class="mt-2 pre-wrap"><%= @cat.introduction %></p>
   </div>
 </div>
 
