--- a/app/views/cats/confirm.html.erb
+++ b/app/views/cats/confirm.html.erb
@@ -17,7 +17,7 @@
   <p class="ml-4"><%= @cat.introduction %></p>
   
   <p class="label mt-6 ml-4"><%= form.label :birthday %></p>
-  <p class="lml-4"><%= @cat.birthday.strftime("%Y/%m/%d") if @cat.birthday %></p>
+  <p class="ml-4"><%= @cat.birthday.strftime("%Y/%m/%d") if @cat.birthday %></p>
   
   <p class="label mt-6 ml-4"><%= form.label :breed_name %></p>
   <p class="ml-4"><%= @cat.breed.name %></p>
