--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
   <p>
     このアプリでは、猫の症状に関連する病気の情報等を検索できます。<br>
     また、猫の症状に関連する体験記を閲覧することもできます。<br>
-    あなたも体験記を投稿することで、別のユーザー・猫さんを救うきっかけになれるかもしれません。ぜひご投稿ください！
+    あなたも体験記を投稿することで、別のユーザー・猫さんを救うきっかけになれるかもしれません。ぜひご投稿ください！（＊体験記の投稿にはユーザー登録が必要です。）
   </p>
 </div>
 
