--- a/app/views/users/blog_list.html.erb
+++ b/app/views/users/blog_list.html.erb
@@ -10,7 +10,7 @@
   </div>
   <div class="column">
     <span class="title is-4"><%= @user.name %>の体験記一覧</span>
-    <p class="mt-2"><%= @user.introduction %></p>
+    <p class="mt-2 pre-wrap"><%= @user.introduction %></p>
   </div>
 </div>
 
