--- a/app/views/devise/registrations/edit_password.html.erb
+++ b/app/views/devise/registrations/edit_password.html.erb
@@ -33,4 +33,4 @@
 <% end %>
 
 
-<%= link_to '戻る', 'javascript:history.back()', class: "button is-light is-rounded m-2" %>
+<%= link_to '戻る', user_path(current_user), class: "button is-light is-rounded m-2" %>
