--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
     <p class="title is-5 my-2 mx-4"><%= @user.name %></p>
   </div>
   <div class="column m-4">
-    <p><%= @user.introduction %></p>
+    <p class="pre-wrap"><%= @user.introduction %></p>
   </div>
 </div>
 
