--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,6 +12,7 @@
 </div>
 
 <div class="align-center my-6">
+<p class="mb-4"><strong>症状に関連する病気についてAIがお調べします！</strong></p>
 <%= link_to select_symptom_path, class: "button is-rounded is-link is-light is-medium is-focused" do %>
   <span class="icon"><i class="fas fa-magnifying-glass"></i></span>
   <span>症状から調べる</span>
