--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
         </div>
 
         <div id="navMenu" class="navbar-menu">
-          <div class="navbar-start">
+          <div class="navbar-start reverse">
             <div class="navbar-item">
               <%= link_to root_path do %>
                 <span class="icon"><i class="fas fa-home"></i></span>
