--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,6 +46,13 @@ body {
   text-align: end;
 }
 
+.main_icon {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
 .reverse a {
   color: hsl(0, 0%, 21%) !important;
 }
@@ -54,11 +61,8 @@ body {
   color: hsl(229, 53%, 53%) !important;
 }
 
-.main_icon {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  object-fit: cover;
+.inline_block {
+  display: inline-block !important;
 }
 
 .is-aqua-green {
