--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,7 +59,7 @@
                       <span class="icon"><i class="fas fa-right-from-bracket"></i></span>
                       <span>ログアウト</span>
                     <% end %>
-                    <% if current_user.admin? %>
+                    <% if current_user.admin? || current_user.guest_admin? %>
                       <%= link_to admin_root_path, class: "button" do %>
                         <span class="icon"><i class="fas fa-user-tie"></i></span>
                         <span>管理者ページ</span>
